# contree

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.pocketbase  TODO.md  VOICE_CHAT.md  audio.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  start.sh
.claude/: settings.json
DEV/: init-ede.sh  init.sh  seed.py
backend/: main.py
backend/api/: admin_routes.py  auth_routes.py  dev_routes.py  routes.py  stats.py  users_routes.py  websocket.py
backend/auth/: dependencies.py  schemas.py  service.py
backend/db/: database.py  models.py
backend/game/: models.py  rules.py  scoring.py
backend/pocketbase/: client.py
backend/store/: memory_store.py
backend/tests/: conftest.py  test_auth.py  test_belote.py  test_bidding_volee.py  test_dev_routes.py  test_generale.py  test_leave_room.py  test_memory_store.py  test_rate_limiting.py  test_rules.py  test_scoring.py  test_scoring_pause.py  test_stats.py  test_team_selection.py  test_users.py  test_websocket_reconnect.py
backend/users/: models.py  repository.py  schemas.py
docs/: architecture.md  game-model.md  game-rules.md
docs/architecture-decision-records/: ADR-001-python-backend.md  ADR-002-react-typescript-frontend.md  ADR-003-redis-state.md  ADR-004-pure-game-engine.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Game.tsx  test-setup.ts  types.ts
frontend/src/__tests__/: AdminPanel.test.tsx  App.lobby.test.tsx  BidCenter.test.tsx  ChangePasswordPage.test.tsx  Game.seating.test.tsx  Game.trickDisplay.test.tsx  Game.voiceMute.test.tsx  LoginPage.test.tsx  PlayerStatsPanel.test.tsx  RoundResultOverlay.test.tsx  WaitingRoom.test.tsx
frontend/src/components/admin/: AdminPanel.tsx
frontend/src/components/auth/: ChangePasswordPage.tsx  LoginPage.tsx
frontend/src/components/stats/: PlayerStatsPanel.tsx
frontend/src/store/: authStore.ts
frontend/src/voice/: VoiceIndicator.tsx  VoiceManager.ts  index.ts  useVoiceChat.ts
pocketbase/: docker-entrypoint.sh
pocketbase/pb_migrations/: 1_setup_users.js  2_add_player_stats.js
