[project]
name = "contree"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=12",
    "pydantic>=2",
    "sqlalchemy>=2.0",
    "bcrypt>=4.0",
    "PyJWT>=2.8",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
filterwarnings = ["ignore::starlette.exceptions.StarletteDeprecationWarning"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5",
    "ty>=0.0.51",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# Starlette's exception handler typing is overly strict — cast workaround would be verbose
invalid-argument-type = "warn"
